fix: readability

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -20,8 +20,8 @@ body::before {
 		0deg,
 		transparent,
 		transparent 2px,
-		rgba(0, 0, 0, 0.2) 2px,
-		rgba(0, 0, 0, 0.2) 4px
+		rgba(0, 0, 0, 0.055) 2px,
+		rgba(0, 0, 0, 0.055) 4px
 	);
 	pointer-events: none;
 	z-index: 9999;
@@ -32,7 +32,7 @@ body::after {
 	content: '';
 	position: fixed;
 	inset: 0;
-	background: radial-gradient(ellipse at center, transparent 50%, rgba(0, 0, 0, 0.42) 100%);
+	background: radial-gradient(ellipse at center, transparent 60%, rgba(0, 0, 0, 0.22) 100%);
 	pointer-events: none;
 	z-index: 9999;
 }
